--- a/public/Stylesheets/scaffold.css
+++ b/public/Stylesheets/scaffold.css
@@ -51,4 +51,34 @@ a:hover { color: #fff; background-color:#000; }
   font-size: 12px;
   list-style: square;
 }
+         
+.list-line-odd {
+  background-color: #e0f8f8;
+}
+.list-line-even {
+  background-color: #f8b0f8;   
+  background-color: #F8F8F8 ;      
 
+}      
+    
+.show_votes_num {
+	margin: 2px;
+	width: 9px; 
+	  border: 4px dotted green; 
+	color: purple;
+}
+body {
+  background-color: #fff; color: #333;
+  
+}
+   
+#content {
+    text-align: left;
+    margin: 0px;
+    padding:  0px 15px;
+    font-family: verdana, sans-serif;
+    border: 4px solid white;
+    width: 680px;   
+	margin-left: 200px;
+    background: #FAFAD2;
+}
