--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,19 +1,10 @@
 <h1>Editing topic</h1>
 
-<% form_for(@topic) do |f| %>
-  <%= f.error_messages %>
+<% form_for(@topic) do |f| %>  
 
-  <p>
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.submit 'Update' %>
-  </p>
+   <%= render :partial => "form", :locals => {:f => f, :button_text => "Update"} %>     
+
+   
 <% end %>
 
 <%= link_to 'Show', @topic %> |
