--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,6 +1,9 @@
 <h1>New topic</h1>
 
-<% form_for(@topic) do |f| %>
+<% form_for(@topic) do |f| %>   
+  <%= render :partial => "form", :locals => {:f => f, :button_text => "Create"} %>
+
+<!-- 
   <%= f.error_messages %>
 
   <p>
@@ -13,7 +16,8 @@
   </p>
   <p>
     <%= f.submit 'Create' %>
-  </p>
+  </p>         
+-->
 <% end %>
 
 <%= link_to 'Back', topics_path %>
