--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
   <title>Topics: <%= controller.action_name %></title>
   <%= stylesheet_link_tag 'scaffold' %>    
   <%= javascript_include_tag :defaults, :cache =>true %> 
+  
+   <%= ajaxful_rating_style %>
 
   <% if logged_in? %>
        <%= link_to "Logout", logout_path %>    
