--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -4,6 +4,10 @@
   
   has <span class ="show_votes_num">  <%= pluralize( @topic.votes.size, "vote") %>. </span>
 </p>
+
+<div id = "ajaxful-rating-#{!params[:dimension].blank? ? "#{params[:dimension]}-" : ''}topic-#{@topic.id}"
+ <%= ratings_for @topic %> 
+ </div>  
  
 <p>
   <b>Description:</b>
